<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemoteBukkit</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="login_screen">Login to a Server</string>
    <string name="hostname">Server Hostname</string>
    <string name="port">Port</string>
    <string name="attempts">Login Attempts</string>
    <string name="title_activity_console">Server Console</string><string name="remember">Remember these details</string>

</resources>
