<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="net.rymate.remote.LoginActivity"
    tools:ignore="MergeRootFrame">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/login_screen"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/textHostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"

            android:inputType="textNoSuggestions"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/textView1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignRight="@+id/textView1"
            android:layout_alignEnd="@+id/textView1"
            android:hint="@string/hostname">

            <requestFocus />
        </EditText>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/textPort"
            android:layout_alignTop="@+id/textHostname"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/textHostname"
            android:hint="@string/port"/>

        <EditText
            android:id="@+id/textUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:imeOptions="actionNext"
            android:layout_below="@+id/textHostname"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_alignRight="@+id/textPort"
            android:layout_alignEnd="@+id/textPort"
            android:hint="@string/username"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:hint="@string/password"

            android:layout_below="@+id/textUsername"

            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_alignRight="@+id/textPort"
            android:layout_alignEnd="@+id/textPort" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:layout_marginTop="80dp"
            android:layout_below="@+id/editText2"
            android:layout_alignLeft="@+id/textView1"
            android:layout_alignStart="@+id/textView1"
            android:layout_alignRight="@+id/textHostname"
            android:layout_alignEnd="@+id/textHostname"
            android:onClick="clickLogin" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember"
            android:id="@+id/checkBox"
            android:layout_below="@+id/editText2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="30dp"
            android:layout_alignRight="@+id/textPort"
            android:layout_alignEnd="@+id/textPort" />

    </RelativeLayout>
</FrameLayout>
